fixing padding issue on mobile

--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -800,10 +800,6 @@ div {
 		display:none;
 	}
 
-	.mobile-hamburger {
-		display: none;
-	}
-
 	.mobile-nav {
 		display:none;
 		position: absolute;
@@ -837,12 +833,6 @@ div {
 	.nav-pb-logo {
 		width: 94px;
 		height: 78px;
-	}
-
-	.mobile-hamburger {
-	display: inline-block;
-	color: #E35205;
-	font-size: 2.3em;
 	}
 
 	.utility-nav {
@@ -1136,27 +1126,79 @@ div {
 		width: 63.3px;
 	}
 
-	.mobile-hamburger {
-		font-size: 1.45em;
-	}
+/****** NAV HAMBURGER START ******/
+/*********************************/
 
-			/* Style The Dropdown Button */
+		/* Style The Dropdown Button */
 	.mobile-dropbtn {
-		background-color: #E35205;
+			background-color: #E35205;
+			color: white;
+			padding: 11px 15px 15px 15px; /*smaller here */
+			font-size: 1em; /*smaller here */
+			border: none;
+			cursor: pointer;
+		}
+
+	/* The container <div> - needed to position the dropdown content */
+	.mobile-dropdown {
+		position: relative;
+		display: inline-block;
+	}
+
+	/* Dropdown Content (Hidden by Default) */
+	.mobile-dropdown-content {
+		display: none;
+		position: absolute;
+		background-color: #f9f9f9;
+		min-width: 96vw;
+		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+		border-top: 4px solid #E35205;
+		z-index: 1;
+		right: 0;
+	}
+
+	/* Links inside the dropdown */
+	.mobile-dropdown-content a {
+		color: #E35205;
+		padding: 12px 16px;
+		text-decoration: none;
+		display: block;
+	}
+
+	/* Change color of dropdown links on hover */
+	.mobile-dropdown-content a:hover {
+		background-color: #6EC72D;
 		color: white;
-		padding: 11px 15px 15px 15px;
-		font-size: 1em;
-		border: none;
-		cursor: pointer;
 	}
 
-	.full-nav {
-		margin: 0 2% 0 0;
+	/* Show the dropdown menu on hover */
+	.mobile-dropdown:hover .mobile-dropdown-content {
+		display: block;
 	}
 
-	.fa-bars {
-		height: 10%;
-		vertical-align: middle;
+	/* Change the background color of the dropdown button when the dropdown content is shown */
+	.mobile-dropdown:hover .mobile-dropbtn {
+		background-color: #6EC72D;
+	}
+
+	#nav1 {
+		font-family: 'Barlow Semi Condensed', sans-serif;
+		font-weight: 500;
+	}
+
+	#nav1 li {
+		display:block!important;
+		text-align: center;
+	}
+
+	.nav2-wrapper {
+		width: 100%;
+		background-color: #E35205;
+	}
+
+	#nav2 ul {
+		display: block;
+		margin: 0 auto;
 	}
 
 	#nav2 li {
@@ -1164,6 +1206,24 @@ div {
 	font-size: .5em;
 	width:18%;
 	text-align:center;
+	}
+
+	#nav2 li a {
+		color: white;
+		text-transform: capitalize!important;
+		font-family: Arial, sans-serif;
+	}
+
+	#nav2 li a:hover {
+		color: white;
+	}
+
+/******* NAV HAMBURGER END *******/
+/*********************************/
+
+	.fa-bars {
+		height: 10%;
+		vertical-align: middle;
 	}
 
 	.hero-section {
